# IsoMaker

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  check_format_isomaker.py  coding_style_formating.md  install-linux.sh  install-mac.sh  install-windows.bat  tester.sh  update_documentation.sh
.github/workflows/: Unit_tests.yml  compilation.yml
cmake/: CMakeLists.txt  SDL2.cmake  glad.cmake  imgui.cmake  jsoncpp.cmake  raygui.cmake  raylib.cmake
codingstyle/: codingStyleScript  regexPatterns.py
doc/: Doxyfile
doc/html/: 2DEditor_8cpp.html  2DEditor_8cpp__incl.map  2DEditor_8cpp__incl.md5  2DEditor_8cpp_source.html  2DEditor_8hpp.html  2DEditor_8hpp.js  2DEditor_8hpp__dep__incl.map  2DEditor_8hpp__dep__incl.md5  2DEditor_8hpp__incl.map  2DEditor_8hpp__incl.md5  2DEditor_8hpp_source.html  annotated.html  annotated_dup.js  classes.html  classpaint_1_1Editor-members.html  classpaint_1_1Editor.html  classpaint_1_1Editor.js  dir_000002_000001.html  dir_4bd1ebb85acf5915171c6010ad9053a2.html  dir_4bd1ebb85acf5915171c6010ad9053a2.js  dir_4bd1ebb85acf5915171c6010ad9053a2_dep.map  dir_4bd1ebb85acf5915171c6010ad9053a2_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_6a93ae822a4cf445d9929348d80824a0.html  dir_6a93ae822a4cf445d9929348d80824a0.js  dir_6a93ae822a4cf445d9929348d80824a0_dep.map  dir_6a93ae822a4cf445d9929348d80824a0_dep.md5  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  index.html  main_8cpp.html  (+15 more)
doc/latex/: md_README.tex  refman.tex
docs/: 2DEditor_8cpp.html  2DEditor_8cpp__incl.map  2DEditor_8hpp.html  2DEditor_8hpp__dep__incl.md5  2DEditor_8hpp__incl.map  2DEditor_8hpp__incl.md5  2DEditor_8hpp_source.html  3DMapEditor_8cpp.html  3DMapEditor_8cpp__incl.map  3DMapEditor_8cpp__incl.md5  3DMapEditor_8hpp.html  3DMapEditor_8hpp__dep__incl.map  3DMapEditor_8hpp__dep__incl.md5  3DMapEditor_8hpp__incl.map  3DMapEditor_8hpp__incl.md5  3DMapEditor_8hpp_source.html  BasicObject3D_8cpp__incl.map  BasicObject3D_8hpp.html  BasicObject3D_8hpp__incl.map  BasicObject3D_8hpp__incl.md5  EditorEvents_8cpp.html  EditorEvents_8cpp__incl.map  EditorEvents_8cpp__incl.md5  EditorEvents_8hpp.html  EditorEvents_8hpp__dep__incl.map  EditorEvents_8hpp__dep__incl.md5  EditorEvents_8hpp__incl.map  EditorEvents_8hpp__incl.md5  EditorEvents_8hpp_source.html  Grid_8cpp.html  Grid_8hpp.html  Grid_8hpp__dep__incl.map  Grid_8hpp__dep__incl.md5  Grid_8hpp__incl.md5  Grid_8hpp_source.html  LoadedAssets_8cpp.html  LoadedAssets_8cpp__incl.map  LoadedAssets_8cpp__incl.md5  LoadedAssets_8hpp.html  LoadedAssets_8hpp__dep__incl.map  (+225 more)
docs/html/: 2DEditor_8cpp__incl.md5  2DEditor_8hpp__dep__incl.map  3DMapEditor_8cpp.html  3DMapEditor_8cpp__incl.md5  3DMapEditor_8hpp.html  3DMapEditor_8hpp__dep__incl.md5  3DMapEditor_8hpp__incl.map  3DMapEditor_8hpp_source.html  BasicObject3D_8cpp.html  BasicObject3D_8cpp__incl.md5  BasicObject3D_8hpp__dep__incl.map  BasicObject3D_8hpp__dep__incl.md5  BasicObject3D_8hpp_source.html  Grid_8cpp__incl.map  Grid_8cpp__incl.md5  Grid_8hpp.html  Grid_8hpp__dep__incl.md5  Grid_8hpp__incl.map  MainUI_8cpp.html  MainUI_8hpp.html  MainUI_8hpp__dep__incl.map  MainUI_8hpp_source.html  classBasicObject3D__inherit__graph.map  classMainUI-members.html  classMainUI__coll__graph.md5  classMapEditor-members.html  classmap_1_1MapGrid.html  dir_000005_000003.html  dir_184285f856ae8f0ddffa31c0ba78eb55.html  dir_19fb250abc1c0b5f77dd87f58116c311_dep.map  dir_4bd1ebb85acf5915171c6010ad9053a2_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_6a93ae822a4cf445d9929348d80824a0_dep.md5  dir_da1a828b0707cb75d06d573bb83cb731_dep.map  functions.html  functions_func.html  functions_vars.html  hierarchy.html  inherit_graph_0.md5  inherit_graph_1.map  (+7 more)
docs/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  classes_9.js  defines_0.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enumvalues_0.js  enumvalues_1.js  enumvalues_10.js  (+68 more)
game_project/: CMakeLists.txt  install-linux.sh
game_project/src/: Character.cpp  Character.hpp  Game.cpp  Game.hpp  main.cpp
game_project/src/Utilities/: PathHelper.cpp  PathHelper.hpp
includes/: IAsset.hpp  IObject2D.hpp  IObject3D.hpp  macros.hpp
includes/Game/: Effect.hpp
includes/Input/: AHandler.hpp  (+2 more)
libs/: SDL2.cmake  glad.cmake
libs/Graphical/: CMakeLists.txt  install-linux.sh
libs/Graphical/includes/: IAsset.hpp  IObject2D.hpp  IObject3D.hpp
libs/Graphical/includes/Assets/: AAsset.cpp  AAsset.hpp  IAsset.hpp
libs/Graphical/includes/Entities/: AObject.hpp  IObject.hpp
libs/Graphical/includes/Input/: AHandler.hpp  IHandler.hpp  InputTypes.hpp
libs/Graphical/includes/Objects/: AEntity.hpp  AObject.hpp  IObject.hpp
libs/Graphical/includes/Render/: ILight.hpp
libs/Graphical/src/Assets/: AAsset.cpp  AAsset.hpp  Asset2D.cpp  Asset2D.hpp  Asset3D.cpp  Asset3D.hpp
libs/Graphical/src/Entities/: BasicObject.cpp  BasicObject.hpp  BasicObject2D.cpp  BasicObject2D.hpp  BasicObject3D.cpp  BasicObject3D.hpp  Character.cpp  Character.hpp  MapElement.cpp  MapElement.hpp
libs/Graphical/src/Input/: Controller.hpp  Gamepad.hpp  Keyboard.hpp  MouseKeyboard.cpp  MouseKeyboard.hpp
libs/Graphical/src/Render/: Camera.cpp  Camera.hpp  PointLight.cpp  PointLight.hpp  Window.cpp  Window.hpp
libs/Graphical/src/Utilities/: DrawCubeTexture.cpp  ObjectBox.cpp  ObjectBox.hpp  Vector.cpp  Vector.hpp
openAsset/: AnimateImage2D.cpp  AnimateImage2D.hpp  AssetPreviewWindow.cpp  AssetPreviewWindow.hpp  CMakeLists.txt  main.cpp
ressources/: Block2.glb  newBlock.glb
src/: main.cpp
tests/: test_input.cpp  test_main.cpp  tester.sh
(+105 files in other folders)
